Made some changes, moved to Dali Tools for Metamodel Generation. Removed the old way of doing it and the meta-model folder.  Also, set up needed entities to have audit logging.  Not the best implementation but am limited due to current frameworks - at least it all works. :)  Made a few minor changes to the Property framework, more needed to be done.
Also moved to annotation driven entity set up, no entities needed to be
tracked in the persistence.xml. Everything tested and found working.

--- a/TimeEase/build.properties
+++ b/TimeEase/build.properties
@@ -1,5 +1,4 @@
 source.. = src/,\
-           test/,\
            dbmigrations/,\
            config/
 output.. = bin/
@@ -26,3 +25,4 @@ bin.includes = plugin.xml,\
                config/,\
                dbmigrations/,\
                lib/
+jre.compilation.profile = JavaSE-1.7
